<resources>
    <string-array name="state_list">
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Tripura</item>
    </string-array>
    <string name="app_name">SevenSisters</string>
    <string name="home_button">HomeButton</string>
    <string name="profile_info">ProfileInfo</string>
    <string name="discover">Discover</string>
    <string name="add_trip">Add Trip</string>
    <string name="mizoram">Mizoram</string>
    <string name="meghalaya">Meghalaya</string>
    <string name="assam">Assam</string>
    <string name="tripura">Tripura</string>
    <string name="name">name</string>
    <string name="email_id">email id</string>
    <string name="location">location</string>
    <string name="nagaland">Nagaland</string>
    <string name="manipur">Manipur</string>
    <string name="arunachal_pradesh">Arunachal Pradesh</string>
    <string name="destination">Destination</string>
    <string name="email">email</string>
    <string name="profile_picture">profile picture</string>
    <string name="phone">phone</string>
    <string name="history">History</string>
    <string name="tourist_count">tourist count</string>
    <string name="admin_icon">admin icon</string>
    <string name="Name">Name</string>
    <string name="Location">Location</string>
    <string name="Email">Email-</string>
    <string name="Contact">Contact-</string>
    <string name="password">Password-</string>
    <string name="Phone">Phone-</string>
    <string name="tourism">Tourism</string>
    <string name="hotels">hotels &amp; dining</string>
    <string name="culture">Culture &amp; History</string>
    <string name="map">map</string>
    <string name="state_image">state_image</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in"><u>log in</u></string>
    <string name="log_out"><u>log out</u></string>
    <string name="sign_in">SIGN IN</string>
    <string name="username">Username</string>
    <string name="start_journey">START ON</string>
    <string name="textview">TextView</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="locations">Locations</string>
    <string name="select_state">Select State</string>
    <string name="display_name">Display Name</string>
    <string name="click_here"><u>click here</u></string>
</resources>