<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3B3C36"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/task_bar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/shadow"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/home_icon"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#3B3C36"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:background="@color/white"
            android:contentDescription="@string/home_button"
            app:srcCompat="@drawable/home_icon" />

        <ImageButton
            android:id="@+id/blog_icon"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#3B3C36"
            android:focusableInTouchMode="false"
            android:background="@color/white"
            android:contentDescription="@string/profile_info"
            app:srcCompat="@drawable/blog_icon" />

        <ImageButton
            android:id="@+id/discover_icon"
            android:layout_width="75dp"
            android:backgroundTint="#3B3C36"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="false"
            android:layout_margin="0dp"
            android:focusableInTouchMode="false"
            android:contentDescription="@string/discover"
            app:srcCompat="@drawable/discover" />

        <ImageButton
            android:id="@+id/add_trip_icon"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="false"
            android:backgroundTint="#3B3C36"
            android:focusableInTouchMode="false"
            android:background="@color/white"
            android:contentDescription="@string/add_trip"
            app:srcCompat="@drawable/plan_trip" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>