<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StateActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="327dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/state_image"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:contentDescription="@string/state_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/state_name"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/assam"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="@+id/state_image"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/state_image" />

        <LinearLayout
            android:id="@+id/state_tabs"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/state_image">

            <TextView
                android:id="@+id/tourism_tab"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/locations"
                android:textColor="#0197f6"
                android:textSize="20sp"
                android:textStyle="bold" />
    <!--        <TextView
                android:id="@+id/hotel_dining_tab"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/hotels"
                android:textColor="#0197f6"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/culture_history_tab"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/culture"
                android:textColor="#0197f6"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/map_tab"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="Trip Brochures"
                android:textColor="#0197f6"
                android:textSize="20dp"
                android:textStyle="bold" />
            -->
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/state_info"
        android:layout_width="match_parent"
        android:layout_height="395dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>